First overhaul intended to fix glaring bugs. Wait for pages to come in focus before triggering questions. Avoid triggering questions on pages built with framesets. Add a possibility to provide multiple answers to the same question. Fix horizontal alignment of the answer field.

--- a/contentstyle.css
+++ b/contentstyle.css
@@ -27,8 +27,9 @@
     position: absolute;
     display: block;
     top: 50%;
+    left: 40%;
     width: 20%;
-    margin: 50px 40%;
+    margin: 50px 0 0 -10px;
     font-size: 16px;
     font-weight: bold;
     line-height: 35px;
